[gd_scene load_steps=19 format=3 uid="uid://dogetpjjqt3r2"]

[ext_resource type="Script" uid="uid://bmmo121tfpfr6" path="res://scripts/enemy_simple_move.gd" id="1_0pvn7"]
[ext_resource type="Texture2D" uid="uid://dc0wv85msjoas" path="res://assets/enemies/Green Slime Spritesheet.png" id="1_tuic5"]
[ext_resource type="PackedScene" uid="uid://c8m1r23w5tydn" path="res://scenes/killzone.tscn" id="2_0pvn7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0pvn7"]
atlas = ExtResource("1_tuic5")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_35rgu"]
atlas = ExtResource("1_tuic5")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5vyh"]
atlas = ExtResource("1_tuic5")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_452or"]
atlas = ExtResource("1_tuic5")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukqwe"]
atlas = ExtResource("1_tuic5")
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q1e0"]
atlas = ExtResource("1_tuic5")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_boo2g"]
atlas = ExtResource("1_tuic5")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq38r"]
atlas = ExtResource("1_tuic5")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_io87k"]
atlas = ExtResource("1_tuic5")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q1p6"]
atlas = ExtResource("1_tuic5")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl2pm"]
atlas = ExtResource("1_tuic5")
region = Rect2(128, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q800"]
atlas = ExtResource("1_tuic5")
region = Rect2(144, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_35rgu"]
animations = [{
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_0pvn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35rgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5vyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_452or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukqwe")
}],
"loop": true,
"name": &"HeadStomp",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q1e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boo2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq38r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io87k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q1p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl2pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q800")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pvn7"]
size = Vector2(10, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5vyh"]
size = Vector2(14, 7)

[node name="GreenSlime" type="Area2D" groups=["Enemies"]]
collision_mask = 2
script = ExtResource("1_0pvn7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_35rgu")
animation = &"HeadStomp"
autoplay = "default"
frame_progress = 0.6256476

[node name="CollisionShapeHeadStomp" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_0pvn7")

[node name="Killzone" parent="." instance=ExtResource("2_0pvn7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_t5vyh")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-8, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
